# live-chat

./: README.md  pyproject.toml
chatapp/: db.sqlite3  package-lock.json  tailwind.config.js
chatapp/.main/templates/: output.css
chatapp/chatapp/: settings.py  urls.py
chatapp/main/: models.py  url.py  urls.py  views.py
chatapp/main/migrations/: 0001_initial.py  0002_user_avatar.py  0003_rename_user_myuser.py
chatapp/main/templates/: input.css  main.html  output.css
