[tool.poetry]
name = "live-chat"
version = "0.1.0"
description = ""
authors = ["anurmamedov <sdeveloperanar@gmail.com>"]
readme = "README.md"
packages = [{include = "live_chat"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
